# fairo

polymetis/polymetis/: CMakeLists.txt
polymetis/polymetis/conf/: launch_gripper.yaml  launch_robot.yaml
polymetis/polymetis/conf/gripper/: franka_hand.yaml
polymetis/polymetis/conf/robot_client/: franka_hardware.yaml
polymetis/polymetis/conf/robot_model/: franka_panda.yaml
polymetis/polymetis/python/polymetis/: _version.py
polymetis/polymetis/python/polymetis/robot_client/: abstract_robot_client.py  executable_robot_client.py  metadata.py
polymetis/polymetis/python/scripts/: launch_gripper.py  launch_robot.py
polymetis/polymetis/src/clients/franka_panda_client/: franka_panda_client.cpp
polymetis/polymetis/torch_isolation/: CMakeLists.txt
polymetis/polymetis/torch_isolation/pinocchio_isolation/: CMakeLists.txt
polymetis/polymetis/torch_isolation/pinocchio_isolation/src/: pinocchio_wrapper.cpp
